# cli

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  pytest.ini
.github/workflows/: release.yml
dailybot_cli/: __init__.py  api_client.py  config.py  display.py  main.py
dailybot_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dailybot_cli/commands/: __init__.py  agent.py  auth.py  config.py  interactive.py  status.py  update.py
tests/: api_client_test.py  commands_test.py  config_test.py
