[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dailybot-cli"
version = "0.3.0"
description = "Dailybot CLI - The command-line bridge between humans and agents. Progress reports, observability, and workflow automation for modern teams across Slack, Google Chat, Discord, MS Teams, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dailybot", email = "support@dailybot.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
dailybot = "dailybot_cli.main:cli"

[project.urls]
Homepage = "https://www.dailybot.com"
Documentation = "https://docs.dailybot.com"

[tool.setuptools.packages.find]
include = ["dailybot_cli*"]
